--- a/style_hamburger.css
+++ b/style_hamburger.css
@@ -18,7 +18,7 @@
 .hamburger__inner {
 	width: 100%;
 	height: 5px;
-	background-color: #122618;
+	background-color: var(--header);
 	position: absolute;
 	left: 0;
 	top: 50%;
@@ -31,7 +31,7 @@
 	content: "";
 	width: 100%;
 	height: 5px;
-	background-color: #122618;
+	background-color: var(--header);
 	position: absolute;
 	left: 0;
 	transition: transform 0.3s 0.2s ease-in-out;
@@ -62,7 +62,6 @@
 }
 
 .hamburger--active .hamburger__inner::before {
-	transition: 3;
 	transform: translateY(-10px) rotate(-45deg);
 }
 
@@ -70,7 +69,7 @@
 	height: 100vh;
 	width: 250px;
 	background-color: var(--color4);
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	transform: translateX(-250px);
